--- a/myScriptDroid/myScriptDroid.csproj
+++ b/myScriptDroid/myScriptDroid.csproj
@@ -16,6 +16,8 @@
     <AssemblyName>myScriptDroid</AssemblyName>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <TargetFrameworkVersion>v4.4</TargetFrameworkVersion>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,10 +46,10 @@
     <Reference Include="System.Web.Services" />
     <Reference Include="Mono.Android" />
     <Reference Include="Xamarin.Android.Support.v4">
-      <HintPath>..\packages\Xamarin.Android.Support.v4.21.0.3.0\lib\MonoAndroid10\Xamarin.Android.Support.v4.dll</HintPath>
+      <HintPath>packages\Xamarin.Android.Support.v4.22.1.1.1\lib\MonoAndroid403\Xamarin.Android.Support.v4.dll</HintPath>
     </Reference>
     <Reference Include="myScript">
-      <HintPath>..\myScript\bin\Debug\myScript.dll</HintPath>
+      <HintPath>..\..\Projects\myScript\myScript\bin\Debug\myScript.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -59,7 +61,6 @@
       <DependentUpon>RazorView.cshtml</DependentUpon>
     </Compile>
     <Compile Include="MyCertificate.cs" />
-    <Compile Include="SimpleResourceHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
